--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ section {
     max-width: 1140px;
     min-width: 320px;
     width: 100%;
-    padding: 45px 20px;
+    padding: 10px 20px;
     margin: 0 auto;
 }
 
@@ -116,6 +116,8 @@ section {
     overflow: hidden;
     width: 100%;
     padding-top: 56.25%;
+    margin-left: 37.5%;
+    margin-top: 5%;
 }
 
 .videoResponsive iframe,
@@ -146,9 +148,11 @@ footer {
     margin: 10px 20px 5px 20px;
 }
 
-.instrumentos a {
-    display: inline-block;
-    margin: 20px;
+.instrumentos-fotos {
+    display: grid;
+    grid-template-columns: auto auto;
+    row-gap: 20px;
+    text-align: center;
 }
 
 .titulo-instrumento {
@@ -156,6 +160,7 @@ footer {
     font-size: 45px;
     text-decoration: underline;
     color: red;
+    padding-bottom: 20px;
 }
 
 .subtitulos-instrumentos{
